UI Changes and code optimization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
         exclude group: 'glide-parent'
     }
 
+    //Carousel Recyclerview
+    implementation 'com.github.sparrow007:carouselrecyclerview:1.2.6'
+
     //Timber
     implementation "com.jakewharton.timber:timber:$timber_version"
 }
